--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
 aiokafka = "^0.11.0"
 orjson = "^3.10.7"
+httpx = "^0.27.2"
+celery = "^5.4.0"
 
 
 [build-system]
