--- a/docker_compose/celery.yaml
+++ b/docker_compose/celery.yaml
@@ -1,51 +1,34 @@
 networks:
   dev:
+    driver: bridge
 
-  celery:
-    build:
-      context: ..
-    container_name: celery
-    command: celery
-    depends_on:
-      - redis
-    env_file:
-      - .env
-    networks:
-      - dev
-
-  celery_beat:
-    build:
-      context: ..
-    container_name: celery_beat
-    command: beat
-    depends_on:
-      - backend
-      - db
-      - redis
-    env_file:
-      - .env
-    networks:
-      - dev
-
+services:
   redis:
-    image: "redis:alpine"
-    restart: always
-    container_name: redis
-    expose:
-      - "6379"
-    env_file:
-      - .env
-    healthcheck:
-      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
-      interval: 10s
-      timeout: 30s
-      retries: 5
-      start_period: 80s
+    image: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - dev  # Сетевые настройки должны быть здесь
+
+  celery_worker:
+    container_name: celery_worker
+    build: ..
+    command: celery -A infra.celery.celery_worker worker --pool=solo --loglevel=info
+    volumes:
+      - ../app/:/app/
+    depends_on:
+      - redis
     networks:
       - dev
-    volumes:
-      - redis_data:/data
 
-volumes:
-  redis_data:
-    name: redis_data
+  flower:
+    container_name: flower
+    build: ..
+    command: celery -A infra.celery.celery_worker flower --port=5555
+    ports:
+      - "5555:5555"
+    depends_on:
+      - redis
+      - celery_worker
+    networks:
+      - dev
