--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ aiokafka = "^0.11.0"
 orjson = "^3.10.7"
 httpx = "^0.27.2"
 celery = "^5.4.0"
+redis = "^5.1.1"
+flower = "^2.0.1"
+ipython = "^8.28.0"
 
 
 [build-system]
