--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ alembic = "^1.13.3"
 python-dotenv = "^1.0.1"
 asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
-aiokafka = "^0.11.0"
 orjson = "^3.10.7"
 httpx = "^0.27.2"
 celery = "^5.4.0"
 redis = "^5.1.1"
 flower = "^2.0.1"
 ipython = "^8.28.0"
+sqladmin = {extras = ["full"], version = "^0.19.0"}
 
 
 [build-system]
