Правки очереди, вынес ключи в отдельные таблицы

--- a/docker_compose/redis.yaml
+++ b/docker_compose/redis.yaml
@@ -19,8 +19,10 @@ services:
       start_period: 80s
     networks:
       - dev
+    command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
       - redis_data:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
 
 volumes:
   redis_data:
