--- a/docker_compose/redis.yaml
+++ b/docker_compose/redis.yaml
@@ -22,7 +22,7 @@ services:
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
       - redis_data:/data
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - ../redis.conf:/usr/local/etc/redis/redis.conf
 
 volumes:
   redis_data:
