Изменил postgresql на mariadb, объединил vt, ae в модель result, добавил proxy, сменил python на 3.11

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
 APP_ENV=dev
 API_PORT=8000
+API_HOST=0.0.0.0
 DEBUG=True
 DOCS_URL=/api/docs
 TITLE="URL Checker"
-POSTGRES_URI=postgresql+asyncpg://postgres:iyu1vap8@db:5432/links
-POSTGRES_SCHEMA=public
 RELOAD=False
 LOGGING_LEVEL=20
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_USER=maria_user
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=links
 DB_HOST=db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=iyu1vap8
-POSTGRES_DB=links
-DB_PORT=5432
+DB_PORT=3306
+SYNC_SQLALCHEMY_DATABASE_URL=mysql+pymysql://maria_user:password@db:3306/links
+SQLALCHEMY_DATABASE_URL="mysql+asyncmy://maria_user:password@db:3306/links"
