--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 fastapi = "^0.115.2"
 uvicorn = "^0.31.1"
 dependency-injector = "^4.42.0"
@@ -15,8 +15,6 @@ pydantic-settings = "^2.5.2"
 sqlalchemy = "^2.0.35"
 alembic = "^1.13.3"
 python-dotenv = "^1.0.1"
-asyncpg = "^0.29.0"
-psycopg2-binary = "^2.9.9"
 orjson = "^3.10.7"
 httpx = "^0.27.2"
 celery = "^5.4.0"
@@ -24,6 +22,8 @@ redis = "^5.1.1"
 flower = "^2.0.1"
 ipython = "^8.28.0"
 sqladmin = {extras = ["full"], version = "^0.19.0"}
+asyncmy = "^0.2.9"
+pymysql = "^1.1.1"
 
 
 [build-system]
