--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ ipython = "^8.28.0"
 sqladmin = {extras = ["full"], version = "^0.19.0"}
 asyncmy = "^0.2.9"
 pymysql = "^1.1.1"
+fake-headers = "^1.0.2"
 
 
 [build-system]
