--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ fastapi = "^0.115.2"
 uvicorn = "^0.31.1"
 dependency-injector = "^4.42.0"
 pydantic-settings = "^2.5.2"
-sqlalchemy = "^2.0.35"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.36"}
 alembic = "^1.13.3"
 python-dotenv = "^1.0.1"
 orjson = "^3.10.7"
