--- a/docker_compose/app.dev.yaml
+++ b/docker_compose/app.dev.yaml
@@ -27,7 +27,7 @@ services:
     depends_on:
       redis:
         condition: service_healthy
-      db:
+      mariadb:
         condition: service_healthy
 
     command: "uvicorn --factory app.application.api.main:create_app --timeout-graceful-shutdown 2 --host ${API_HOST:?} --port ${API_PORT:?} --reload"
